Change MP4s to GIFs

--- a/os.html
+++ b/os.html
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 		<div id="name">Ocean Spray</div>
-		<div id="link"><a class="link" href="https://www.slideshare.net/secret/7K1MWmZhu8abbk">Plansbook</a></div>
+		<div id="link"><a class="link" href="https://www.dropbox.com/s/ot4bx54ja9bgvua/NSAC2018_TEAM325_OceanSpray_FinalPlansBook.pdf?dl=0">Plansbook</a></div>
 		<div id="ask">
 			<h3>The Ask</h3>
 			<p>Create a fully integrated campaign to get millenials to eat and drink cranberries. Oh, and make it snappy.</p>
@@ -77,11 +77,11 @@
 						allowtransparency
 						allow="autoplay"></iframe>
 				</div></div>
-				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/os/1.mp4"></div>
+				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/os/1.gif"></div>
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/os/can.png"></div>
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/os/jr.png"></div>
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/os/concept1.png"></div>
-				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/os/2.mp4"></div>
+				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/os/2.gif"></div>
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/os/billboard.png"></div>
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/os/concept2.png"></div>
 			</div>
