--- a/about.html
+++ b/about.html
@@ -52,7 +52,10 @@
 			</div>
 		</div>
 		<div id="headshot"></div>
-		<div id="bio">Hi, I'm Andrew, and I like to think I can design. (Hey, my Mom says I can, so screw you art school). I have an unhealthy love for RGB hex codes, Muji, and Italian soda from Trader Joes. You can usually find me with a coffee in my hand and BBQ in my stomach, trying to find a place to park that doesn't cost an arm and a leg&mdash;without parallel parking. I think of myself as a minimalist urbanist, which is a way of saying that I don't care how small Providence is. And, most of all, I'm passionate about history and finding out where things come from (and how they got here). </div>
+		<div id="bio">
+			Hi, I'm Andrew, and I like to think I can design. I have an unhealthy love for RGB hex codes, Muji, and Italian soda from Trader Joes. You can usually find me coffee in hand, bbq in stomach, trying to find a place to park that doesn't cost an arm and a leg (without parallel parking).<br> 
+			I think of myself as a minimalist urbanist, which is a way of saying that I don't care how big or small the city I live in is&mdash;so I'm happy everywhere from NYC to Providence. And, most of all, I'm passionate about history and finding out where things come from (and how they got here).  
+		</div>
 		<div id="caption">This headshot was taken at 6 in the morning at a diner in the ever-gritty Port of Providence after an all nighter. Ignore the look of dispair.</div>
 	</div>
 </body>
