--- a/bhddh.html
+++ b/bhddh.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="flickity.css"/>
 	<link rel="stylesheet" type="text/css" href="fullscreen.css"/>
 	
+	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
+	
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
 	<script src="js/barba.min.js"></script>
@@ -24,6 +26,8 @@
 		$(".headerWork").find(".headerText").center({against: '.headerWork'});
 		$(".headerAbout").find(".headerText").center({against: '.headerAbout'});
 		$(".headerContact").find(".headerText").center({against: '.headerContact'});
+		
+		$(".link").center({against: '#link'});
 		
 		$('.main-carousel').flickity({
 			cellAlign: 'left',
@@ -48,13 +52,21 @@
 			</div>
 		</div>
 		<div id="name">BHDDH</div>
-		<div id="ask">
-			<h3>The Ask</h3>
-			<p>Rebrand a government agency with no brand image and a logo made in Microsoft Publisher.</p>
+		<div id="ask" class="copyBlock">
+			<h3>The  Ask</h3>
+			<p>Rebrand a government entity with no brand image and a logo made in Microsoft Publisher. Bring the department from the 19th centurn into the 21st with a brand image that screams cutting edge.</p>
 		</div>
-		<div id="answer">
-			<h3>The Answer</h3>
-			<p>Bring Rhode Island's mental health department into the 21st century with a branding campaign that screams cutting edge.</p>
+		<div id="answer" class="copyBlock">
+			<h3>The  Answer</h3>
+			<p>We crafted a logo that links the towns of lil Rhody by silicon, emphasizing a commitement to reconnecting communities with cutting edge mental health medicine.</p>
+		</div>
+		<div id="execution" class="copyBlock">
+			<h3>Execution</h3>
+			<p>The towns of Rhode Island are interconnected by silicon-like links, denoting a commitment to the future of mental health medicine. Horizontal lines are introduced as an element that allows the logo to adapt to a variety of placements.</p>
+		</div>
+		<div id="results" class="copyBlock">
+			<h3>The  Results</h3>
+			<p>Rebrand was presented to the client. They are currently in the process of choosing their new brand identity from a pool presented by this class.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
@@ -67,6 +79,9 @@
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/bhddh/2.png"></div>
 			</div>
 		</div> </div>
-		<div id="portfolioLinks"><a href="pangea.html">Pangea.app</a> | <a href="unicef.html">UNICEF</a> | <a href="os.html">Ocean Spray</a> | BHDDH | <a href="moveout.html">Move Out & Donate</a></div>
+		<div id="footContainer">
+			<div id="portfolioLinks"><a href="pangea.html">Pangea.app</a> | <a href="unicef.html">UNICEF</a> | <a href="os.html">Ocean Spray</a> | <b>BHDDH</b> | <a href="moveout.html">Move Out & Donate</a></div>
+			<div id="friends"><b>Manal Jakhar</b>&mdash;Design<br><b>Lindsay Saiia</b>&mdash;Writing<br><b>Erin Weiland</b>&mdash;Strategy<br><b>Taylor Haughton</b>&mdash;Strategy</div>
+		</div>
 	</div>
 </body>
