--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 	<title>Andrew Thompson | About</title>
 	
 	<link rel="stylesheet" type="text/css" href="main.css">
+	
+	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
@@ -53,11 +55,11 @@
 		</div>
 		<div id="title">Get<br>In<br>Touch</div>
 		<div id="list"><ul>
-			<li><a href="">Linkedin</a></li>
-			<li><a href="">Email</a></li>
-			<li><a href="">Instagram</a></li>
+			<li><a href="https://www.linkedin.com/in/andrew-l-thompson/">Linkedin</a></li>
+			<li><a href="mailto:me@andrewthompson.me?Subject=Hey!">Email</a></li>
+			<li><a href="https://www.instagram.com/andrew_thhompson/">Instagram</a></li>
 			<li>1.860.994.2748</li>
-			<li><a href="">Resume</a></li>
+			<li><a href="https://www.dropbox.com/s/32vh9c11m0jtoih/Andrew%20Thompson%20Resume%202019.pdf?dl=0">Resume</a></li>
 		</ul></div>
 		
 	</div>
