--- a/unicef.html
+++ b/unicef.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="flickity.css"/>
 	<link rel="stylesheet" type="text/css" href="fullscreen.css"/>
 	
+	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
+	
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
 	<script src="js/barba.min.js"></script>
@@ -25,6 +27,8 @@
 		$(".headerAbout").find(".headerText").center({against: '.headerAbout'});
 		$(".headerContact").find(".headerText").center({against: '.headerContact'});
 		$(".link").center({against: '#link'}).css('left', '0');
+		
+		$(".link").center({against: '#link'});
 		
 		$('.main-carousel').flickity({
 			cellAlign: 'left',
@@ -49,14 +53,22 @@
 			</div>
 		</div>
 		<div id="name">UNICEF Kid Power Bands</div>
-		<div id="link"><a class="link" href="https://www.slideshare.net/secret/7K1MWmZhu8abbk">Slidedeck</a></div>
-		<div id="ask">
+		<div id="link"><a class="link" href="https://www.dropbox.com/s/ftkvcvgoaz1m2up/Unicef%20Final%20Keynote.pdf?dl=0">Slidedeck</a></div>
+		<div id="ask" class="copyBlock">
 			<h3>The Ask</h3>
 			<p>Convince parents to buy Unicef Kid Power Bands for their children for their own sake and that of kids world-wide.</p>
 		</div>
-		<div id="answer">
+		<div id="answer" class="copyBlock">
 			<h3>The Answer</h3>
 			<p>Show them how their kids can change the world from as far away as the park down the block.</p>
+		</div>
+		<div id="execution" class="copyBlock">
+			<h3>Execution</h3>
+			<p>We split the difference between portraying the places that children play and the children themselves, emphasizing the idea of "kid power". Outdoor ads are more visual focused, while magazine ads are supported by body copy.</p>
+		</div>
+		<div id="results" class="copyBlock">
+			<h3>Results</h3>
+			<p>Received a near-perfect grade. This campaign is now an example of student work for the Johnson & Wales University Advertising program.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
@@ -67,6 +79,9 @@
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/unicef/6.png"></div>
 			</div>
 		</div> </div>
-		<div id="portfolioLinks"><a href="pangea.html">Pangea.app</a> | UNICEF | <a href="os.html">Ocean Spray</a> | <a href="bhddh.html">BHDDH</a> | <a href="moveout.html">Move Out & Donate</a></div>
+		<div id="footContainer">
+			<div id="portfolioLinks"><a href="pangea.html">Pangea.app</a> | <b>UNICEF</b> | <a href="os.html">Ocean Spray</a> | <a href="bhddh.html">BHDDH</a> | <a href="moveout.html">Move Out & Donate</a></div>
+			<div id="friends"><b>Manal Jakhar</b>&mdash;Design<br><b>Lindsay Saiia</b>&mdash;Writing<br><b>Erin Weiland</b>&mdash;Strategy<br><b>Taylor Haughton</b>&mdash;Strategy</div>
+		</div>
 	</div>
 </body>
