--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 	<title>Andrew Thompson | About</title>
 	
 	<link rel="stylesheet" type="text/css" href="main.css">
+	
+	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
@@ -56,6 +58,6 @@
 			Hi, I'm Andrew, and I like to think I can design. I have an unhealthy love for RGB hex codes, Muji, and Italian soda from Trader Joes. You can usually find me coffee in hand, bbq in stomach, trying to find a place to park that doesn't cost an arm and a leg (without parallel parking).<br><br> 
 			I think of myself as a minimalist urbanist, which is a way of saying that I don't care how big or small the city I live in is&mdash;so I'm happy everywhere from NYC to Providence. And, most of all, I'm passionate about history and finding out where things come from (and how they got here).  
 		</div>
-		<div id="caption">This headshot was taken at 6 in the morning at a diner in the ever-gritty Port of Providence after an all nighter. Ignore the look of dispair.</div>
+		<div id="caption">This headshot was taken at 6 in the morning at a diner in the ever-gritty Port of Providence after an all nighter. Ignore the look of despair.</div>
 	</div>
 </body>
