--- a/os.html
+++ b/os.html
@@ -33,6 +33,8 @@
 		$(".headerAbout").find(".headerText").center({against: '.headerAbout'});
 		$(".headerContact").find(".headerText").center({against: '.headerContact'});
 		
+		$(".link").center({against: '#link'});
+		
 		$('.main-carousel').flickity({
 			cellAlign: 'left',
 			contain: true,
@@ -59,13 +61,21 @@
 		</div>
 		<div id="name">Ocean Spray</div>
 		<div id="link"><a class="link" href="https://www.dropbox.com/s/ot4bx54ja9bgvua/NSAC2018_TEAM325_OceanSpray_FinalPlansBook.pdf?dl=0">Plansbook</a></div>
-		<div id="ask">
-			<h3>The Ask</h3>
+		<div id="ask" class="copyBlock">
+			<h3>Ask</h3>
 			<p>Create a fully integrated campaign to get millenials to eat and drink cranberries. Oh, and make it snappy.</p>
 		</div>
-		<div id="answer">
-			<h3>The Answer</h3>
+		<div id="answer" class="copyBlock">
+			<h3>Answer</h3>
 			<p>Show them how they can add different to their day, from cran-orange drinks in the morning to craisins for the after-work commute.</p>
+		</div>
+		<div id="execution" class="copyBlock">
+			<h3>Execution</h3>
+			<p>We emphasized the power of the cranberry to change your day by adding in a "nimbus" around models and products alike. Creative shown is a combination of unused concepts and finished work.</p>
+		</div>
+		<div id="results" class="copyBlock">
+			<h3>Results</h3>
+			<p>Final campaign was presented as part of the 2018 NSAC. Placed 1st in New England District Competition, and 9th nationally in the Semifinals.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
@@ -86,6 +96,9 @@
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/os/concept2.png"></div>
 			</div>
 		</div> </div>
-		<div id="portfolioLinks"><a href="pangea.html">Pangea.app</a> | <a href="unicef.html">UNICEF</a> | Ocean Spray | <a href="bhddh.html">BHDDH</a> | <a href="moveout.html">Move Out & Donate</a></div>
+		<div id="footContainer">
+			<div id="portfolioLinks"><a href="pangea.html">Pangea.app</a> | <a href="unicef.html">UNICEF</a> | <b>Ocean Spray</b> | <a href="bhddh.html">BHDDH</a> | <a href="moveout.html">Move Out & Donate</a></div>
+			<div id="friends"><b>Andrew Morner</b>&mdash;Design<br><b>Arianna Iacovelli</b>&mdash;Design<br><b>Sydney Gray</b>&mdash;Writing<br><b>Lindsay Saiia</b>&mdash;Writing<br><b>Manal Jakhar</b>&mdash;Photography</div>
+		</div>
 	</div>
 </body>
