--- a/pangea.html
+++ b/pangea.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="flickity.css"/>
 	<link rel="stylesheet" type="text/css" href="fullscreen.css"/>
 	
+	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
+	
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
 	<script src="js/barba.min.js"></script>
@@ -25,6 +27,8 @@
 		$(".headerAbout").find(".headerText").center({against: '.headerAbout'});
 		$(".headerContact").find(".headerText").center({against: '.headerContact'});
 		$(".link").center({against: '#link'}).css('left', '0');
+		
+		$(".link").center({against: '#link'});
 		
 		$('.main-carousel').flickity({
 			cellAlign: 'left',
@@ -50,13 +54,21 @@
 		</div>
 		<div id="name">Pangea.app</div>
 		<div id="link"><a class="link" href="https://www.pangea.app">Website</a></div>
-		<div id="ask">
+		<div id="ask" class="copyBlock">
 			<h3>The Ask</h3>
-			<p>Build (and market) an app that lets students compete in the freelancing landscape to give them a leg up in our evolving workspace.</p>
+			<p>Build (and market) an app that lets students compete in the freelancing landscape to give them a leg up in our evolving workspace. Help show off the skills they have to land them the jobs they deserve. And along the way, help them make a buck or two.</p>
 		</div>
-		<div id="answer">
+		<div id="answer" class="copyBlock">
 			<h3>The Answer</h3>
-			<p>Students can do more than just their major. Show off the skills they have to land them the jobs they deserve. And along the way, help them make a buck or two.</p>
+			<p>Show that students can do more than just their major. Ads run the gamut between general awareness and conversion for the Fall Competition, which drove students to sign up their friends in exchange for a cash prize. All executions shown were produced and run.</p>
+		</div>
+		<div id="execution" class="copyBlock">
+			<h3>Execution</h3>
+			<p>Ads run the gamut between general awareness and conversion for the Fall Competition, which drove students to sign up their friends in exchange for a cash prize. All executions shown were produced and run.</p>
+		</div>
+		<div id="results" class="copyBlock">
+			<h3>Results</h3>
+			<p>Recent executions support the relaunch of the third design, coming up in March. Fall Competition was the single biggest driver of signups in the company's history, attracting hundreds of new users.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
@@ -68,6 +80,9 @@
 				<div class="carousel-cell"><img src="img/pangea/5.png"></div>
 			</div>
 		</div> </div>
-		<div id="portfolioLinks">Pangea.app | <a href="unicef.html">UNICEF</a> | <a href="os.html">Ocean Spray</a> | <a href="bhddh.html">BHDDH</a> | <a href="moveout.html">Move Out & Donate</a></div>
+		<div id="footContainer">
+			<div id="portfolioLinks"><b>Pangea.app</b> | <a href="unicef.html">UNICEF</a> | <a href="os.html">Ocean Spray</a> | <a href="bhddh.html">BHDDH</a> | <a href="moveout.html">Move Out & Donate</a></div>
+			<div id="friends"><b>Adam Alpert</b>&mdash;CEO<br><b>John Tambunting</b>&mdash;CTO<br><b>Kristen Mashikian</b>&mdash;VP of Engineering</div>
+		</div>
 	</div>
 </body>
