--- a/bhddh.html
+++ b/bhddh.html
@@ -53,11 +53,11 @@
 		</div>
 		<div id="name">BHDDH</div>
 		<div id="ask" class="copyBlock">
-			<h3>The  Ask</h3>
+			<h3>The Ask</h3>
 			<p>Rebrand a government entity with no brand image and a logo made in Microsoft Publisher. Bring the department from the 19th centurn into the 21st with a brand image that screams cutting edge.</p>
 		</div>
 		<div id="answer" class="copyBlock">
-			<h3>The  Answer</h3>
+			<h3>The Answer</h3>
 			<p>We crafted a logo that links the towns of lil Rhody by silicon, emphasizing a commitement to reconnecting communities with cutting edge mental health medicine.</p>
 		</div>
 		<div id="execution" class="copyBlock">
@@ -65,8 +65,8 @@
 			<p>The towns of Rhode Island are interconnected by silicon-like links, denoting a commitment to the future of mental health medicine. Horizontal lines are introduced as an element that allows the logo to adapt to a variety of placements.</p>
 		</div>
 		<div id="results" class="copyBlock">
-			<h3>The  Results</h3>
-			<p>Rebrand was presented to the client. They are currently in the process of choosing their new brand identity from a pool presented by this class.</p>
+			<h3>The Results</h3>
+			<p>Rebrand was presented to the client. They are currently in the process of choosing their new brand identity from a pool presented by students from this class.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
