--- a/moveout.html
+++ b/moveout.html
@@ -58,18 +58,18 @@
 <!--		<div id="link"><a class="link" href="https://www.pangea.app">Slidedeck</a></div>-->
 		<div id="ask" class="copyBlock">
 			<h3>The Ask</h3>
-			<p>Get students to donate the dorm furniture they've coexisted with for the past 9 months</p>
+			<p>Get students to donate the dorm furniture they've coexisted with for the past 9 months.</p>
 		</div>
 		<div id="answer" class="copyBlock">
 			<h3>The Answer</h3>
-			<p>Make it an easy breakup and let your unwanted alarm clock, tv, or couch live a second life</p>
+			<p>Make it an easy breakup and let your unwanted alarm clock, tv, or couch live a second life. We brought recycling to the point of trash conversion, reminding </p>
 		</div>
 		<div id="execution" class="copyBlock">
 			<h3>Execution</h3>
 			<p>Posters were placed at points of conversion, like dumpsters and dorm building entrances. Social images were posted to JWU official accounts on instagram, twitter, and facebook.</p>
 		</div>
 		<div id="results" class="copyBlock">
-			<h3>Results</h3>
+			<h3>The Results</h3>
 			<p>This campaign was used by Johnson & Wales University for a month at the end of the school year. Campaign as a whole was covered by multiple local news networks.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
