--- a/pangea.html
+++ b/pangea.html
@@ -67,7 +67,7 @@
 			<p>Ads run the gamut between general awareness and conversion for the Fall Competition, which drove students to sign up their friends in exchange for a cash prize. All executions shown were produced and run.</p>
 		</div>
 		<div id="results" class="copyBlock">
-			<h3>Results</h3>
+			<h3>The Results</h3>
 			<p>Recent executions support the relaunch of the third design, coming up in March. Fall Competition was the single biggest driver of signups in the company's history, attracting hundreds of new users.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
