--- a/unicef.html
+++ b/unicef.html
@@ -67,7 +67,7 @@
 			<p>We split the difference between portraying the places that children play and the children themselves, emphasizing the idea of "kid power". Outdoor ads are more visual focused, while magazine ads are supported by body copy.</p>
 		</div>
 		<div id="results" class="copyBlock">
-			<h3>Results</h3>
+			<h3>The Results</h3>
 			<p>Received a near-perfect grade. This campaign is now an example of student work for the Johnson & Wales University Advertising program.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
