--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 	<title>Andrew Thompson</title>
 	
 	<link rel="stylesheet" type="text/css" href="main.css">
+	
+	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
