--- a/bhddh.html
+++ b/bhddh.html
@@ -1,4 +1,15 @@
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117438573-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-117438573-1');
+	</script>
+
+	
 	<title>Andrew Thompson | BHDDH</title>
 	
 	<link rel="stylesheet" type="text/css" href="main.css">
