--- a/os.html
+++ b/os.html
@@ -18,6 +18,8 @@
 	
 	<link rel="stylesheet" href="https://cdn.plyr.io/3.5.2/plyr.css" />
 	
+	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
+	
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
 	<script src="js/barba.min.js"></script>
