--- a/index.html
+++ b/index.html
@@ -89,20 +89,20 @@
 				<a class="headerContact animsition-link" href="contact.html"><div class="headerText">Contact</div></a>
 			</div>
 		</div>
-		<a id="Pangea" class="tile animsition-link" href="pangea.html">
+		<a id="Pangea" class="tile animsition-link" href="pangea">
 			<div class="hoverTitle">Pangea.app</div>
 		</a>
-		<a id="Unicef" class="tile animsition-link" href="unicef.html">
+		<a id="Unicef" class="tile animsition-link" href="unicef">
 			<div class="hoverTitle">UNICEF</div>
 		</a>
 		<div id="tag"><div class="tag">Andrew Thompson is an Advertising major at Johnson & Wales University in Providence, RI. He specializes in UI/UX and Graphic Design.</div></div>
-		<a id="OS" class="tile animsition-link" href="os.html">
+		<a id="OS" class="tile animsition-link" href="os">
 			<div class="hoverTitle">Ocean Spray</div>
 		</a>
-		<a id="BHDDH" class="tile animsition-link" href="bhddh.html">
+		<a id="BHDDH" class="tile animsition-link" href="bhddh">
 			<div class="hoverTitle">BHDDH</div>
 		</a>
-		<a id="MoveOut" class="tile animsition-link" href="moveout.html">
+		<a id="MoveOut" class="tile animsition-link" href="moveout">
 			<div class="hoverTitle">Move Out & Donate</div>
 		</a>
 	</div>
