--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<a class="headerContact animsition-link" href="contact.html"><div class="headerText">Contact</div></a>
 			</div>
 		</div>
-		<a id="Pangea" class="tile animsition-link" href="pangea">
+		<a id="Pangea" class="tile animsition-link" href="andrewthompson.me/pangea.html">
 			<div class="hoverTitle">Pangea.app</div>
 		</a>
 		<a id="Unicef" class="tile animsition-link" href="unicef">
